--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint . --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -18,21 +18,30 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.7.0",
+    "@stylistic/eslint-plugin": "^5.1.0",
     "@tanstack/react-query": "^5.82.0",
     "@types/react-query": "^1.2.8",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-newline-destructuring": "^1.2.2",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "typescript-eslint": "^8.36.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
