--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.7.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@tanstack/react-query": "^5.82.0",
