--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.6",
