--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
@@ -56,6 +58,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
