--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@tanstack/react-query": "^5.82.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-query": "^1.2.8",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
