--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
     "input-otp": "^1.4.2",
+    "jodit-react": "^5.2.22",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
@@ -50,7 +51,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
